NetBSD Problem Report #40480

From www@NetBSD.org  Mon Jan 26 09:10:51 2009
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id C5C2963BFFA
	for <gnats-bugs@gnats.netbsd.org>; Mon, 26 Jan 2009 09:10:51 +0000 (UTC)
Message-Id: <20090126091051.9383F63BAB8@narn.NetBSD.org>
Date: Mon, 26 Jan 2009 09:10:51 +0000 (UTC)
From: gabdelmalik@avdat.com.au
Reply-To: gabdelmalik@avdat.com.au
To: gnats-bugs@NetBSD.org
Subject: With USE_FORT=yes in mk.conf libevent compile fails 
X-Send-Pr-Version: www-1.0

>Number:         40480
>Category:       lib
>Synopsis:       With USE_FORT=yes in mk.conf libevent compile fails
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    lib-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Jan 26 09:15:00 +0000 2009
>Closed-Date:    Mon Jan 26 15:10:44 +0000 2009
>Last-Modified:  Sun Feb 01 23:50:02 +0000 2009
>Originator:     George Abdelmalik
>Release:        5.0_RC1
>Organization:
ADS
>Environment:
NetBSD bart.fork.id.au 4.99.73 NetBSD 4.99.73 (BART) #0: Thu Oct 23 22:40:26 EST 2008  srcmstr@bart.fork.id.au:/vstore/netbsd-current/obj/sys/arch/amd64/compile/BART amd64

>Description:
lib/libevent/evdns.c line 77 unconditionally  #defines _FORTIFY_SOURCE 3

when mk.conf contains:
  USE_FORT=       yes
The build terminates in error at that line citing redefinition of _FORTIFY_SOURCE

>How-To-Repeat:
Run build.sh with USE_FORT=yes specified in mk.conf.
>Fix:
Enclose affected line within #ifndef, such that it becomes;
#ifndef _FORTIFY_SOURCE
#define _FORTIFY_SOURCE 3
#endif

>Release-Note:

>Audit-Trail:
From: Christos Zoulas <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/40480 CVS commit: src/lib/libevent
Date: Mon, 26 Jan 2009 15:09:56 +0000 (UTC)

 Module Name:	src
 Committed By:	christos
 Date:		Mon Jan 26 15:09:56 UTC 2009

 Modified Files:
 	src/lib/libevent: evdns.c

 Log Message:
 PR/40480: George Abdelmalik: Don't redefine _FORTIFY_SOURCE if it is already
 defined.


 To generate a diff of this commit:
 cvs rdiff -r1.1 -r1.2 src/lib/libevent/evdns.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: christos@NetBSD.org
State-Changed-When: Mon, 26 Jan 2009 10:10:44 -0500
State-Changed-Why:
fixed, thanks!


From: Soren Jacobsen <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/40480 CVS commit: [netbsd-5] src/lib/libevent
Date: Sun,  1 Feb 2009 23:46:53 +0000 (UTC)

 Module Name:	src
 Committed By:	snj
 Date:		Sun Feb  1 23:46:53 UTC 2009

 Modified Files:
 	src/lib/libevent [netbsd-5]: evdns.c

 Log Message:
 Pull up following revision(s) (requested by christos in ticket #326):
 	lib/libevent/evdns.c: revision 1.2
 PR/40480: George Abdelmalik: Don't redefine _FORTIFY_SOURCE if it is already
 defined.


 To generate a diff of this commit:
 cvs rdiff -r1.1 -r1.1.8.1 src/lib/libevent/evdns.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.