PR/40480: George Abdelmalik: Don't redefine _FORTIFY_SOURCE if it is already defined.